src/assets/css/style.css
/* ... */
.main-menu .navbar-collapse li a {
    opacity: 1;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
    display: block;
    font-size: 13px;
    font-weight: 400;
    font-family: var(--font-mono);
    letter-spacing: 0.04em;
    position: relative;
    text-transform: uppercase;
    color: var(--lighter-color);
    -webkit-transition: all 500ms ease;
    transition: all 500ms ease;
}



.main-menu .navbar-collapse li a:hover {
    color: var(--crimson);
    text-decoration: none;
}




.main-menu .navbar-collapse li ul li {
    width: 100%;
    padding: 7px 20px;
}



.main-menu .navbar-collapse li ul li ul {
    left: 100%;
    top: 0%;
}


.main-menu .navbar-header {
    display: none;
}



.main-menu .navbar-header .navbar-toggle {
    float: right;
    padding: 4px 0;
    cursor: pointer;
    background: transparent;
}

.main-menu .navbar-header .navbar-toggle .icon-bar {
    background: var(--main-color);
    height: 3px;
    width: 26px;
    display: block;
    margin: 5px 0;
}





/*
* ----------------------------------------------------------------------------------------
* 04.HEADER CSS STYLE
* ----------------------------------------------------------------------------------------
*/
.main-hero-area {
    padding-top: 115px;
}

.hero-content {
    padding: 100px 50px;
    position: relative;
}


.hero-content h2 {
    display: block;
    font-weight: 500;
    margin-bottom: 5px;
    color: rgb(142, 142, 146);
    font-size: 20px;
}

.hero-content h1 {
    font-weight: 500;
    line-height: 68px;
    margin: 10px 0px;
    font-size: 80px;
    text-transform: uppercase;
}

.hero-content h1 span {
    color: transparent;
    -webkit-text-stroke: 1px var(--void);
}

.hero-btns {
    margin-top: 30px;
}

.hero-content .hero-btns .read-more {
    margin-top: 15px;
    text-decoration: underline;
}

.author-image-part {
    z-index: 1;
    overflow: hidden;
    max-width: 575px;
    margin-left: auto;
    margin-right: auto;
    position: relative;
    text-align: center;
    border-radius: 0 0 580px 565px;
}

.author-image-part .bg-circle {
    z-index: -2;
    width: 425px;
    height: 425px;
    position: absolute;
    left: 5%;
    top: 4%;
    border-radius: 50%;
    background: var(--black-color);
}


.author-image-part .progress-shape {
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: -1;
    width: 100%;
    text-align: center;
}

.hero-counter-area {
    margin-top: 60px;
    padding: 35px 40px;
    border-radius: 100px;
    background: var(--primary-color);
    width: 80%;
    margin: 0 auto;
}


.counter-item {
    text-align: center;
}

.counter-title {
    color: var(--black-color);
}

.hero-counter-area .count-text {
    line-height: 1;
    font-weight: 700;
    color: var(--black-color);
    text-align: center;
    font-size: 50px;

}

.hero-counter-area .count-text.plus:after {
    content: '+';
}

.hero-counter-area .count-text.k-plus:after {
    content: 'k+';
}

.hero-counter-area .count-text.percent:after {
    content: '%+';
}

.hero-counter-area .counter-title {
    display: block;
}





/*
* ----------------------------------------------------------------------------------------
* 05.ABOUT CSS STYLE
* ----------------------------------------------------------------------------------------
*/
.about-area {
    padding-top: 115px;
    padding-bottom: 15px;
}

.about-single-area {
    padding-bottom: 15px;
}

.hero-content .job {
    display: inline-block;
    background-color: #f5f5f5;
    padding: 15px 40px;
    margin-top: 10px;
}

.hero-content .job span {
    position: relative;
    display: inline-block;
    padding-right: 15px;
    margin-right: 10px;
}

.hero-content .job span:last-child {
    margin: 0px;
    padding: 0px;
}

.hero-content .job span:last-child:after {
    display: none;
}

.hero-content .job span::after {
    position: absolute;
    content: "";
    width: 6px;
    height: 6px;
    background-color: rgba(0, 0, 0, .15);
    right: 0px;
    top: 50%;
    transform: translateY(-50%);
    border-radius: 100%;
}

.container-inner {
    padding: 40px;
    border: 1px solid rgba(0, 0, 0, 0.05);
    border-radius: 20px;
    box-shadow: rgba(255, 255, 255, 0.025) 0px 0.362176px 0.651917px -1px inset, rgba(255, 255, 255, 0.036) 0px 3px 5.4px -2px inset;
    background: rgba(13, 13, 24, 0.85); border-color: var(--stardust);
}

.about-content-part {}

/* Alignment: left card stretches to match stacked right boxes */
.about-row-stretch {
    align-items: stretch;
}

/* Force columns to be flex containers so children can stretch */
.about-row-stretch > [class*="col-"] {
    display: flex !important;
    flex-direction: column;
}

.about-image-part {
    text-align: center;
    padding: 40px;
    border: 1px solid var(--stardust);
    border-radius: 20px;
    background: rgba(13, 13, 24, 0.85);
    backdrop-filter: blur(12px);
}

.about-image-part--stretch {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.about-content-part,
.about-content-part-bottom {
    padding: 40px;
    border: 1px solid var(--stardust);
    border-radius: 20px;
    background: rgba(13, 13, 24, 0.85);
    backdrop-filter: blur(12px);
}

.about-content-part-bottom {
    margin-top: 24px;
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.about-content-part-bottom h2 {
    margin-bottom: 35px;
}

.about-image-part img {
    width: 300px;
}

.about-image-part h2 {
    font-size: 40px;
}

.about-content-part h2 {
    font-size: 40px;
    line-height: 50px;
    margin-bottom: 20px;
    font-weight: 400;
}


.about-content-part h2 span {
    padding: 0 20px;
    border: 1px solid rgba(0, 0, 0, 0.1);
}

.adress-field ul li {}

.adress-field ul li i {
    color: #00FF00;
    margin-right: 10px;
    font-size: 13px;
}


.about-social {
    margin-top: 30px;
}
/* ... */

